Removed overflow:hidden from the sharebar container fixes #2

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     -webkit-box-shadow:  2px 3px 5px 0px rgba(0, 0, 0, 0.1);
     box-shadow:  2px 3px 5px 0px rgba(0, 0, 0, 0.1);
     left: 20px;
-    overflow: hidden;
     padding: 10px;
     position: absolute;
     top: 200px;
